--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,10 @@
+body{
+  background-image: url('plant.png');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-color: #ccffcc;
+}
+
 section {
   width: 50%; margin: 10px auto;
 }
