--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,14 @@
 body{
+  
+  background-color: #d2e2ab;
+}
+nav{
+  background-color: #7e8667;
+}
+section {
   background-image: url('plant.png');
   background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-color: #ccffcc;
-}
-
-section {
+  background-position: 50% 0%;
   width: 50%; margin: 10px auto;
 }
 
