--- a/public/styles.css
+++ b/public/styles.css
@@ -10,6 +10,7 @@ section {
   background-repeat: no-repeat;
   background-position: 50% 0%;
   width: 50%; margin: 10px auto;
+  min-height: 100vh;
 }
 
 @media screen and (max-width: 992px) {
